[gd_scene load_steps=7 format=2]

[ext_resource path="res://Actors/player/ledge_detection_node/ledge_detector.gd" type="Script" id=1]

[sub_resource type="CylinderShape" id=1]
radius = 1.4

[sub_resource type="SphereMesh" id=2]
radius = 0.025
height = 0.05

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 1, 0.956863, 0, 1 )
emission_enabled = true
emission = Color( 1, 0.956863, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=4]
radius = 0.05
height = 0.1

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.223529, 0, 1, 1 )
emission_enabled = true
emission = Color( 0.109804, 0, 1, 1 )
emission_energy = 16.0
emission_operator = 0
emission_on_uv2 = false

[node name="Ledge_Detector" type="Spatial"]
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]
collision_layer = 0
collision_mask = 262144

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
shape = SubResource( 1 )

[node name="RayCast_Ledge" type="RayCast" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.35 )
enabled = true
cast_to = Vector3( 0, -1.25, 0 )

[node name="RayCast_Wall" type="RayCast" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.1, 0 )
enabled = true
cast_to = Vector3( 0, 0, -1.5 )

[node name="Debug_Point" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Debug_Point2" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Debug_Point3" type="MeshInstance" parent="."]
mesh = SubResource( 4 )
material/0 = SubResource( 5 )
